Fixed navbar brand (Website Name) so it's not so large that it doesn't fit on mobile devices.

--- a/style.css
+++ b/style.css
@@ -100,4 +100,7 @@ a:hover {
 	.hero-unit {
 		padding:29px;
 	}
+	.navbar .brand {
+		font-size:1.1em;	
+	}
 }
